[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/2player_versus.gd" type="Script" id=1]
[ext_resource path="res://entities/grid/grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/roboto_black.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/time_counter.gd" type="Script" id=4]
[ext_resource path="res://scenes/score_number_label.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/themes/game_over_box_theme.tres" type="StyleBox" id=6]
[ext_resource path="res://scenes/camera_shake_2d.tscn" type="PackedScene" id=7]

[node name="2PlayerVersus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -105.919
margin_top = -170.0
margin_right = 374.081
margin_bottom = 560.0
rect_scale = Vector2( 1.5, 1.5 )
color = Color( 0, 0, 0, 1 )

[node name="Grid" parent="." instance=ExtResource( 2 )]
position = Vector2( 25, 300 )
cell_size = 52.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 25.0
margin_bottom = 200.507

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
margin_right = 480.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "Versus Blitz"
align = 1
valign = 1

[node name="VBoxScoreTimeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 45.0
margin_right = 480.0
margin_bottom = 195.0
rect_min_size = Vector2( 0, 150 )
alignment = 1

[node name="VBoxTimeContainer" type="VBoxContainer" parent="VBoxContainer/VBoxScoreTimeContainer"]
margin_right = 238.0
margin_bottom = 150.0
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer"]
margin_top = 9.0
margin_right = 238.0
margin_bottom = 140.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer/HBoxContainer"]
margin_right = 117.0
margin_bottom = 131.0
size_flags_horizontal = 3

[node name="Time_Label" type="Label" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer/HBoxContainer/VBoxContainer"]
margin_right = 117.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "Time"
align = 1
valign = 1

[node name="Score_Label" type="Label" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer/HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 117.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 3 )
text = "Score"
align = 1
valign = 1

[node name="Rival_Score_Label" type="Label" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer/HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 117.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 3 )
text = "Rival"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer/HBoxContainer"]
margin_left = 121.0
margin_right = 238.0
margin_bottom = 131.0
size_flags_horizontal = 3

[node name="Time_Counter" type="Label" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer/HBoxContainer/VBoxContainer2"]
margin_right = 117.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "0:00"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="Score_Number_Label" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
margin_right = 117.0

[node name="Rival_Score_Number_Label" parent="VBoxContainer/VBoxScoreTimeContainer/VBoxTimeContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
margin_top = 90.0
margin_right = 117.0
margin_bottom = 131.0

[node name="VRivalGridContainer" type="VBoxContainer" parent="VBoxContainer/VBoxScoreTimeContainer"]
margin_left = 242.0
margin_right = 480.0
margin_bottom = 150.0
size_flags_horizontal = 3

[node name="RivalGrid" parent="VBoxContainer/VBoxScoreTimeContainer/VRivalGridContainer" instance=ExtResource( 2 )]
position = Vector2( 0, 135 )
cell_size = 16.0

[node name="HEnemyInformationContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 199.0
margin_right = 480.0
margin_bottom = 199.0
alignment = 1

[node name="VEnemyScoreBoxContainer" type="VBoxContainer" parent="VBoxContainer/HEnemyInformationContainer"]
margin_right = 238.0
size_flags_horizontal = 3

[node name="VRivalGridContainer" type="VBoxContainer" parent="VBoxContainer/HEnemyInformationContainer"]
margin_left = 242.0
margin_right = 480.0
size_flags_horizontal = 3

[node name="VictoryCenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="VictoryCenterContainer"]
margin_left = 60.0
margin_top = 180.0
margin_right = 420.0
margin_bottom = 540.0
custom_styles/panel = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryCenterContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 355.0
rect_min_size = Vector2( 350, 350 )
custom_constants/separation = 10
alignment = 1

[node name="VictoryScoreTitle" type="Label" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 350.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 3 )
text = "Neat."
align = 1

[node name="Label2" type="Label" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 350.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 3 )
text = "You Scored:"
align = 1

[node name="VictoryScoreLabel" type="Label" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 350.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 3 )
text = "Score"
align = 1

[node name="RetryButton" type="Button" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_left = 75.0
margin_top = 199.0
margin_right = 275.0
margin_bottom = 246.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
shortcut_in_tooltip = false
text = "Retry"

[node name="MainMenuButton" type="Button" parent="VictoryCenterContainer/PanelContainer/VBoxContainer"]
margin_left = 75.0
margin_top = 256.0
margin_right = 275.0
margin_bottom = 303.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
custom_constants/hseparation = 0
shortcut_in_tooltip = false
text = "Main Menu"

[node name="CameraShake2D" parent="." instance=ExtResource( 7 )]
[connection signal="board_loaded_into_grid" from="Grid" to="." method="_on_Grid_board_loaded_into_grid"]
[connection signal="explosive_pipe_destroyed" from="Grid" to="." method="_on_Grid_explosive_pipe_destroyed"]
[connection signal="pipe_touch" from="Grid" to="." method="_on_Grid_pipe_touch"]
[connection signal="board_loaded_into_grid" from="VBoxContainer/VBoxScoreTimeContainer/VRivalGridContainer/RivalGrid" to="." method="_on_RivalGrid_board_loaded_into_grid"]
[connection signal="pressed" from="VictoryCenterContainer/PanelContainer/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="VictoryCenterContainer/PanelContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
